fix: Changing position of albums with playlists
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/41

--- a/app/src/main/res/menu/play_back_bottom_menu.xml
+++ b/app/src/main/res/menu/play_back_bottom_menu.xml
@@ -6,8 +6,8 @@
         android:icon="@drawable/round_add_home_24" />
 
     <item
-        android:id="@+id/albumsFragment"
-        android:title="@string/albums"
+        android:id="@+id/playlistsFragment"
+        android:title="@string/playlists"
         android:icon="@drawable/ic_album" />
 
     <item
