--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -134,14 +134,6 @@
                     app:exitAnim="@anim/to_left"
                     app:popEnterAnim="@anim/from_left"
                     app:popExitAnim="@anim/from_right" />
-
-                <action
-                    android:id="@+id/action_albumsFragment_to_playlistsFragment"
-                    app:destination="@id/playlistsFragment"
-                    app:enterAnim="@anim/to_right"
-                    app:exitAnim="@anim/to_left"
-                    app:popEnterAnim="@anim/from_left"
-                    app:popExitAnim="@anim/from_right" />
         </fragment>
 
         <fragment
@@ -166,6 +158,14 @@
             android:id="@+id/playlistsFragment"
             android:name="br.com.listennow.fragments.PlaylistsFragment"
             android:label="@string/playlists_title">
+
+                <action
+                    android:id="@+id/action_playlistsFragment_to_albumsFragment"
+                    app:destination="@id/albumsFragment"
+                    app:enterAnim="@anim/to_right"
+                    app:exitAnim="@anim/to_left"
+                    app:popEnterAnim="@anim/from_left"
+                    app:popExitAnim="@anim/from_right" />
 
                 <action
                     android:id="@+id/action_playlistsFragment_to_songDetailsFragment"
