--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -35,13 +35,26 @@
                 app:queryBackground="@android:color/transparent" />
         </androidx.cardview.widget.CardView>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/playlists_see_albums"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/playlists_see_albums"
+            android:textColor="@color/primary"
+            app:iconTint="@color/primary"
+            app:icon="@drawable/ic_album"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/playlists_search_bar"
+            app:layout_constraintStart_toStartOf="parent"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/playlists_recyclerview"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/playlists_search_bar"
+            app:layout_constraintTop_toBottomOf="@id/playlists_see_albums"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="155dp"
             tools:listitem="@layout/fragment_playlists_item" />
