feat: Opening songDetails from Notification
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/43

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,10 @@
             android:id="@+id/action_global_to_errorFragment"
             app:destination="@id/errorFragment" />
 
+        <action
+            android:id="@+id/action_global_to_songDetails"
+            app:destination="@id/songDetailsFragment" />
+
         <!-- Fragments-->
         <fragment
             android:id="@+id/homeFragment"
