feat: Adding button car mode
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/51

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="playBackButtonsColor">#191921</color>
     <color name="iconColor">#FFFFFF</color>
     <color name="red">#E53935</color>
+    <color name="esmerald">#50C878</color>
 </resources>
