--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,6 +101,19 @@
                     tools:listitem="@layout/fragment_song_item"
                     android:visibility="gone"/>
 
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/car_mode_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/ic_car"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:textColor="@color/white"
+                    android:src="@drawable/ic_car"
+                    app:tint="@color/white" />
+
                 <com.facebook.shimmer.ShimmerFrameLayout
                     android:id="@+id/shimmerList"
                     android:layout_width="match_parent"
