chore: Removing unused icons/images/menus

--- a/app/src/main/res/layout/fragment_albums_item.xml
+++ b/app/src/main/res/layout/fragment_albums_item.xml
@@ -34,8 +34,7 @@
                     app:bindImage="@{albumItemDecorator.thumb}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@drawable/album" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/albums_item_name"
