--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -40,8 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/playlists_see_albums"
-            android:textColor="@color/primary"
-            app:iconTint="@color/primary"
+            android:textColor="@color/text"
+            app:iconTint="@color/text"
             app:icon="@drawable/ic_album"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/playlists_search_bar"
