--- a/app/src/main/res/layout/fragment_playlists_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlists_new_playlist.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -14,14 +13,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/playlists_new_playlist_screen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/playlists_new_playlist"
-            android:textColor="@color/background"
+            android:textColor="@color/primary"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +66,7 @@
             app:layout_constraintTop_toBottomOf="@id/playlists_new_playlist_title"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
+            android:textColor="@color/white"
             android:backgroundTint="@color/background"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
