--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="iconColor">#FFFFFF</color>
     <color name="red">#E53935</color>
     <color name="esmerald">#50C878</color>
+    <color name="text">#000000</color>
 </resources>
