--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         tools:context=".fragments.HomeFragment"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:id="@+id/card_search_songs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/gold"
+            android:background="@color/design_default_color_surface"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintVertical_bias="0"
             app:layout_constraintBottom_toTopOf="@+id/refresh_songs">
@@ -35,7 +35,7 @@
                 app:searchIcon="@drawable/ic_search"
                 android:focusable="true"
                 app:queryBackground="@android:color/transparent" />
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/refresh_songs"
