--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:id="@+id/playlists_search_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,7 +18,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/gold"
+             app:layout_constraintBottom_toTopOf="@id/container_under_playlists_search_bar"
+            android:background="@color/design_default_color_surface"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintVertical_bias="0">
 
@@ -33,56 +34,66 @@
                 android:focusable="true"
                 android:layout_margin="5dp"
                 app:queryBackground="@android:color/transparent" />
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/playlists_see_albums"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/playlists_see_albums"
-            android:textColor="@color/text"
-            app:iconTint="@color/text"
-            app:icon="@drawable/ic_album"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/playlists_search_bar"
-            app:layout_constraintStart_toStartOf="parent"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/playlists_recyclerview"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/playlists_see_albums"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="155dp"
-            tools:listitem="@layout/fragment_playlists_item" />
-
-        <br.com.listennow.components.EmptyState
-            android:id="@+id/playlists_empty_state"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_under_playlists_search_bar"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/playlists_search_bar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:message="@string/albums_no_playlists_found_empty_state"
-            android:layout_marginBottom="155dp"
-            android:visibility="gone" />
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/playlists_new_playlist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:icon="@drawable/ic_add"
-            android:text="@string/playlists_new_playlist"
-            app:iconTint="@color/white"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/background"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="170dp"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/playlists_see_albums"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/playlists_see_albums"
+                android:textColor="@color/text"
+                app:iconTint="@color/text"
+                app:icon="@drawable/ic_album"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@id/playlists_search_bar"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/playlists_recyclerview"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/playlists_see_albums"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="155dp"
+                tools:listitem="@layout/fragment_playlists_item" />
+
+            <br.com.listennow.components.EmptyState
+                android:id="@+id/playlists_empty_state"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/playlists_search_bar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:message="@string/albums_no_playlists_found_empty_state"
+                android:layout_marginBottom="155dp"
+                android:visibility="gone" />
+
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/playlists_new_playlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/ic_add"
+                android:text="@string/playlists_new_playlist"
+                app:iconTint="@color/white"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/background"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="170dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
