--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -8,19 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <br.com.listennow.components.EmptyState
-            android:id="@+id/albums_empty_state"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:message="@string/albums_no_albums_found_empty_state"
-            android:layout_marginBottom="155dp"
-            android:visibility="gone" />
-
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:id="@+id/albums_search_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,7 +16,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/gold"
+            app:layout_constraintBottom_toTopOf="@id/container_under_search_albums"
+            android:background="@color/design_default_color_surface"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintVertical_bias="0">
 
@@ -43,104 +32,126 @@
                 android:focusable="true"
                 android:layout_margin="5dp"
                 app:queryBackground="@android:color/transparent" />
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/albums_recyclerview"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container_under_search_albums"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/fragment_albums_item"
-            android:layout_marginBottom="155dp"
-            tools:visibility="gone"
-            android:visibility="gone"/>
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmerList"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="visible">
-
-            <LinearLayout
+            <br.com.listennow.components.EmptyState
+                android:id="@+id/albums_empty_state"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:message="@string/albums_no_albums_found_empty_state"
+                android:layout_marginBottom="155dp"
+                android:visibility="gone" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/albums_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:listitem="@layout/fragment_albums_item"
+                android:layout_marginBottom="155dp"
+                tools:visibility="gone"
+                android:visibility="gone"/>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmerList"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/albums_search_bar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="visible">
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_albums_item_skeleton"
-                        android:layout_weight="0.5" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </LinearLayout>
-        </com.facebook.shimmer.ShimmerFrameLayout>
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
+
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_albums_item_skeleton"
+                            android:layout_weight="0.5" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </LinearLayout>
+            </com.facebook.shimmer.ShimmerFrameLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
