--- a/app/src/main/res/layout/fragment_playlist_songs.xml
+++ b/app/src/main/res/layout/fragment_playlist_songs.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:id="@+id/playlist_songs_search_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:background="@color/gold"
+                android:background="@color/design_default_color_surface"
                 app:layout_constraintVertical_chainStyle="packed"
                 app:layout_constraintVertical_bias="0">
 
@@ -39,112 +39,122 @@
                     android:focusable="true"
                     android:layout_margin="5dp"
                     app:queryBackground="@android:color/transparent" />
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/playlist_songs_recyclerview"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_under_search_songs_playlists"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/playlist_songs_search_bar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:listitem="@layout/fragment_song_item"
-                android:visibility="gone"
-                android:layout_marginBottom="155dp" />
-
-            <br.com.listennow.components.EmptyState
-                android:id="@+id/playlists_songs_empty_state"
-                android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/playlist_songs_search_bar"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:message="@string/playlists_songs_not_found_empty_state"
-                android:layout_marginBottom="155dp"
-                android:visibility="gone" />
+                app:layout_constraintBottom_toBottomOf="parent">
 
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:id="@+id/shimmerList"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="155dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/playlist_songs_search_bar">
-
-                <LinearLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/playlist_songs_recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:listitem="@layout/fragment_song_item"
+                    android:visibility="gone"
+                    android:layout_marginBottom="155dp" />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                <br.com.listennow.components.EmptyState
+                    android:id="@+id/playlists_songs_empty_state"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:message="@string/playlists_songs_not_found_empty_state"
+                    android:layout_marginBottom="155dp"
+                    android:visibility="gone" />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmerList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="155dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
 
-                    <include
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        layout="@layout/fragment_song_item_skeleton"  />
-                </LinearLayout>
-            </com.facebook.shimmer.ShimmerFrameLayout>
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
 
-            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/playlist_songs_add_song"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:icon="@drawable/ic_add"
-                android:text="@string/playlist_songs_add_songs"
-                app:iconTint="@color/white"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/background"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="171dp" />
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
+
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
+
+                        <include
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            layout="@layout/fragment_song_item_skeleton"  />
+                    </LinearLayout>
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                    android:id="@+id/playlist_songs_add_song"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:icon="@drawable/ic_add"
+                    android:text="@string/playlist_songs_add_songs"
+                    app:iconTint="@color/white"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/background"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="171dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
